# rusty_crawler

./: Cargo.toml  README.md
src/: crawler.rs  main.rs
