[package]
name = "rusty_crawler"
authors = ["emarifer <enriquemarin_sierra@hotmail.com>"]
description = "A robust yet minimal web crawler implemented in Rust, utilizing various libraries and aiming for scalability and extensibility."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
futures = "0.3.30"
log = "0.4.21"
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["json", "stream"] }
scraper = "0.19.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
url = "2.5.0"
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
